--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,33 +13,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/appbar_padding_top"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:background="@color/colorGreen">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="match_parent"
+
             android:layout_weight="1"
-            android:background="?attr/colorPrimary"
+
             app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:popupTheme="@style/AppTheme.NoActionBar"
             app:title="@string/app_name">
 
         </android.support.v7.widget.Toolbar>
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="@android:dimen/notification_large_icon_height"
-            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:layout_width="220dp"
+            android:layout_height="110dp"
             android:layout_gravity="center"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_partial_secure" />
+            android:src ="@drawable/canada_flag" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+            android:background="@color/colorAccent">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem"
@@ -68,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        android:tooltipText="Add to Shopping List"/>
 
 </android.support.design.widget.CoordinatorLayout>
